--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="container">
       <div class="box blue">1</div>
       <div class="box red">2</div>
+      <div class="box green">3</div>
     </div>
   </body>
 </html>
